primitives/runtime-interface/tests/ui/take_self_by_value.rs
use sp_runtime_interface::runtime_interface;

#[runtime_interface]
trait Test {
	fn test(self) {}
}

fn main() {}
